--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -1,7 +1,6 @@
 {
   "itemGroup.beemancer": "Beemancer",
   "itemGroup.beemancer.main": "Beemancer",
-  "itemGroup.beemancer.bees": "Beemancer - Bees",
   "itemGroup.beemancer.combs": "Beemancer - Combs & Resources",
   
   "block.beemancer.storage_crate": "Storage Crate",
@@ -264,6 +263,107 @@
   "gene.beemancer.species.noble.desc": "Produces more, but slower",
   "gene.beemancer.species.diligent": "Diligent",
   "gene.beemancer.species.diligent.desc": "Works faster, produces less",
+
+  "species.beemancer.meadow": "Meadow Bee",
+  "species.beemancer.forest": "Forest Bee",
+  "species.beemancer.rocky": "Rocky Bee",
+  "species.beemancer.river": "River Bee",
+  "species.beemancer.dune": "Dune Bee",
+  "species.beemancer.nether": "Nether Bee",
+  "species.beemancer.end": "End Bee",
+  "species.beemancer.monsty": "Monsty Bee",
+  "species.beemancer.docile": "Docile Bee",
+  "species.beemancer.loam": "Loam Bee",
+  "species.beemancer.sediment": "Sediment Bee",
+  "species.beemancer.spark": "Spark Bee",
+  "species.beemancer.cultural": "Cultural Bee",
+  "species.beemancer.carbon": "Carbon Bee",
+  "species.beemancer.cupric": "Cupric Bee",
+  "species.beemancer.festering": "Festering Bee",
+  "species.beemancer.skeletal": "Skeletal Bee",
+  "species.beemancer.silken": "Silken Bee",
+  "species.beemancer.arachnid": "Arachnid Bee",
+  "species.beemancer.tanner": "Tanner Bee",
+  "species.beemancer.plume": "Plume Bee",
+  "species.beemancer.quercus": "Quercus Bee",
+  "species.beemancer.boreal": "Boreal Bee",
+  "species.beemancer.tropical": "Tropical Bee",
+  "species.beemancer.paperbark": "Paperbark Bee",
+  "species.beemancer.reed": "Reed Bee",
+  "species.beemancer.karot": "Karot Bee",
+  "species.beemancer.tuber": "Tuber Bee",
+  "species.beemancer.juicy": "Juicy Bee",
+  "species.beemancer.gourd": "Gourd Bee",
+  "species.beemancer.agrarian": "Agrarian Bee",
+  "species.beemancer.flower": "Flower Bee",
+  "species.beemancer.mushroom": "Mushroom Bee",
+  "species.beemancer.tree": "Tree Bee",
+  "species.beemancer.crystal": "Crystal Bee",
+  "species.beemancer.argil": "Argil Bee",
+  "species.beemancer.umbra": "Umbra Bee",
+  "species.beemancer.savanna": "Savanna Bee",
+  "species.beemancer.frost": "Frost Bee",
+  "species.beemancer.volatile": "Volatile Bee",
+  "species.beemancer.ashen": "Ashen Bee",
+  "species.beemancer.igneous": "Igneous Bee",
+  "species.beemancer.rose_stone": "Rose Stone Bee",
+  "species.beemancer.prince": "Prince Bee",
+  "species.beemancer.infernalist": "Infernalist Bee",
+  "species.beemancer.swift": "Swift Bee",
+  "species.beemancer.royal": "Royal Bee",
+  "species.beemancer.ferrous": "Ferrous Bee",
+  "species.beemancer.flux": "Flux Bee",
+  "species.beemancer.lazuli": "Lazuli Bee",
+  "species.beemancer.quartzose": "Quartzose Bee",
+  "species.beemancer.luminous": "Luminous Bee",
+  "species.beemancer.grim": "Grim Bee",
+  "species.beemancer.columnar": "Columnar Bee",
+  "species.beemancer.viscous": "Viscous Bee",
+  "species.beemancer.inky": "Inky Bee",
+  "species.beemancer.fleece": "Fleece Bee",
+  "species.beemancer.adobe": "Adobe Bee",
+  "species.beemancer.geode": "Geode Bee",
+  "species.beemancer.marsh": "Marsh Bee",
+  "species.beemancer.majestic": "Majestic Bee",
+  "species.beemancer.steady": "Steady Bee",
+  "species.beemancer.wind": "Wind Bee",
+  "species.beemancer.thunder": "Thunder Bee",
+  "species.beemancer.water": "Water Bee",
+  "species.beemancer.fire": "Fire Bee",
+  "species.beemancer.auric": "Auric Bee",
+  "species.beemancer.magmatic": "Magmatic Bee",
+  "species.beemancer.spirit": "Spirit Bee",
+  "species.beemancer.crimson": "Crimson Bee",
+  "species.beemancer.mycelial": "Mycelial Bee",
+  "species.beemancer.humus": "Humus Bee",
+  "species.beemancer.floral": "Floral Bee",
+  "species.beemancer.treasure": "Treasure Bee",
+  "species.beemancer.siphoning": "Siphoning Bee",
+  "species.beemancer.zephyr": "Zephyr Bee",
+  "species.beemancer.prismatic": "Prismatic Bee",
+  "species.beemancer.crystalline": "Crystalline Bee",
+  "species.beemancer.insomnia": "Insomnia Bee",
+  "species.beemancer.blazing": "Blazing Bee",
+  "species.beemancer.diamantine": "Diamantine Bee",
+  "species.beemancer.venerable": "Venerable Bee",
+  "species.beemancer.volcanic": "Volcanic Bee",
+  "species.beemancer.xenolith": "Xenolith Bee",
+  "species.beemancer.traveler": "Traveler Bee",
+  "species.beemancer.sorrow": "Sorrow Bee",
+  "species.beemancer.absorbent": "Absorbent Bee",
+  "species.beemancer.light": "Light Bee",
+  "species.beemancer.dark": "Dark Bee",
+  "species.beemancer.imperial": "Imperial Bee",
+  "species.beemancer.demonic": "Demonic Bee",
+  "species.beemancer.paladin": "Paladin Bee",
+  "species.beemancer.chorus": "Chorus Bee",
+  "species.beemancer.ancient": "Ancient Bee",
+  "species.beemancer.void": "Void Bee",
+  "species.beemancer.draconic": "Draconic Bee",
+  "species.beemancer.stellar": "Stellar Bee",
+  "species.beemancer.common": "Common Bee",
+  "species.beemancer.noble": "Noble Bee",
+  "species.beemancer.diligent": "Diligent Bee",
   
   "gene.beemancer.environment.normal": "Normal",
   "gene.beemancer.environment.normal.desc": "Works in standard conditions",
