--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -1,7 +1,6 @@
 {
   "itemGroup.beemancer": "Beemancer",
   "itemGroup.beemancer.main": "Beemancer",
-  "itemGroup.beemancer.bees": "Beemancer - Abeilles",
   "itemGroup.beemancer.combs": "Beemancer - Rayons & Ressources",
   
   "block.beemancer.storage_crate": "Caisse de Stockage",
@@ -46,6 +45,116 @@
   "item.beemancer.noble_comb": "Rayon Noble",
   "item.beemancer.diligent_comb": "Rayon Diligent",
   "item.beemancer.royal_comb": "Rayon Royal",
+  "item.beemancer.meadow_comb": "Rayon des Prés",
+  "item.beemancer.forest_comb": "Rayon Forestier",
+  "item.beemancer.river_comb": "Rayon de Rivière",
+  "item.beemancer.nether_comb": "Rayon du Nether",
+  "item.beemancer.end_comb": "Rayon de l'End",
+  "item.beemancer.monsty_comb": "Rayon Monstrueux",
+  "item.beemancer.docile_comb": "Rayon Docile",
+  "item.beemancer.spark_comb": "Rayon Étincelle",
+  "item.beemancer.cultural_comb": "Rayon Cultivé",
+  "item.beemancer.carbon_comb": "Rayon Carboné",
+  "item.beemancer.cupric_comb": "Rayon Cuprique",
+  "item.beemancer.festering_comb": "Rayon Putride",
+  "item.beemancer.skeletal_comb": "Rayon Squelettique",
+  "item.beemancer.arachnid_comb": "Rayon Arachnide",
+  "item.beemancer.tanner_comb": "Rayon Tannier",
+  "item.beemancer.quercus_comb": "Rayon du Chêne",
+  "item.beemancer.boreal_comb": "Rayon Boréal",
+  "item.beemancer.tropical_comb": "Rayon Tropical",
+  "item.beemancer.paperbark_comb": "Rayon du Bouleau",
+  "item.beemancer.reed_comb": "Rayon des Roseaux",
+  "item.beemancer.flower_comb": "Rayon Floral",
+  "item.beemancer.mushroom_comb": "Rayon Champignon",
+  "item.beemancer.tree_comb": "Rayon Arboricole",
+  "item.beemancer.crystal_comb": "Rayon Cristallin",
+  "item.beemancer.argil_comb": "Rayon Argileux",
+  "item.beemancer.umbra_comb": "Rayon Ombreux",
+  "item.beemancer.savanna_comb": "Rayon de Savane",
+  "item.beemancer.frost_comb": "Rayon Givré",
+  "item.beemancer.volatile_comb": "Rayon Volatile",
+  "item.beemancer.swift_comb": "Rayon Véloce",
+  "item.beemancer.ferrous_comb": "Rayon Ferreux",
+  "item.beemancer.flux_comb": "Rayon du Flux",
+  "item.beemancer.lazuli_comb": "Rayon Lazuli",
+  "item.beemancer.quartzose_comb": "Rayon Quartzeux",
+  "item.beemancer.luminous_comb": "Rayon Lumineux",
+  "item.beemancer.viscous_comb": "Rayon Visqueux",
+  "item.beemancer.inky_comb": "Rayon Encré",
+  "item.beemancer.geode_comb": "Rayon Géode",
+  "item.beemancer.marsh_comb": "Rayon des Marais",
+  "item.beemancer.majestic_comb": "Rayon Majestueux",
+  "item.beemancer.steady_comb": "Rayon Stable",
+  "item.beemancer.auric_comb": "Rayon Aurique",
+  "item.beemancer.magmatic_comb": "Rayon Magmatique",
+  "item.beemancer.crimson_comb": "Rayon Cramoisi",
+  "item.beemancer.treasure_comb": "Rayon au Trésor",
+  "item.beemancer.siphoning_comb": "Rayon Siphon",
+  "item.beemancer.zephyr_comb": "Rayon Zéphyr",
+  "item.beemancer.prismatic_comb": "Rayon Prismatique",
+  "item.beemancer.crystalline_comb": "Rayon Cristallin",
+  "item.beemancer.blazing_comb": "Rayon Flamboyant",
+  "item.beemancer.diamantine_comb": "Rayon Diamantin",
+  "item.beemancer.venerable_comb": "Rayon Vénérable",
+  "item.beemancer.volcanic_comb": "Rayon Volcanique",
+  "item.beemancer.traveler_comb": "Rayon Voyageur",
+  "item.beemancer.sorrow_comb": "Rayon du Chagrin",
+  "item.beemancer.light_comb": "Rayon de Lumière",
+  "item.beemancer.dark_comb": "Rayon des Ténèbres",
+  "item.beemancer.imperial_comb": "Rayon Impérial",
+  "item.beemancer.demonic_comb": "Rayon Démoniaque",
+  "item.beemancer.paladin_comb": "Rayon Paladin",
+  "item.beemancer.ancient_comb": "Rayon Ancien",
+  "item.beemancer.void_comb": "Rayon du Vide",
+  "item.beemancer.draconic_comb": "Rayon Draconique",
+  "item.beemancer.stellar_comb": "Rayon Stellaire",
+  "item.beemancer.flower_pollen": "Pollen Floral",
+  "item.beemancer.mushroom_spore": "Spore de Champignon",
+  "item.beemancer.tree_pollen": "Pollen d'Arbre",
+  "item.beemancer.crystal_pollen": "Pollen Cristallin",
+  "item.beemancer.pollen_of_wind": "Pollen du Vent",
+  "item.beemancer.pollen_of_thunder": "Pollen du Tonnerre",
+  "item.beemancer.pollen_of_water": "Pollen de l'Eau",
+  "item.beemancer.pollen_of_fire": "Pollen du Feu",
+  "item.beemancer.pollen_of_light": "Pollen de Lumière",
+  "item.beemancer.pollen_of_darkness": "Pollen des Ténèbres",
+  "item.beemancer.void_pollen": "Pollen du Vide",
+  "item.beemancer.coal_fragment": "Fragment de Charbon",
+  "item.beemancer.leather_fragment": "Fragment de Cuir",
+  "item.beemancer.oak_log_fragment": "Fragment de Chêne",
+  "item.beemancer.spruce_log_fragment": "Fragment de Sapin",
+  "item.beemancer.jungle_log_fragment": "Fragment d'Acajou",
+  "item.beemancer.birch_log_fragment": "Fragment de Bouleau",
+  "item.beemancer.dark_oak_log_fragment": "Fragment de Chêne Noir",
+  "item.beemancer.acacia_log_fragment": "Fragment d'Acacia",
+  "item.beemancer.mangrove_log_fragment": "Fragment de Mangrove",
+  "item.beemancer.ice_fragment": "Fragment de Glace",
+  "item.beemancer.gunpowder_fragment": "Fragment de Poudre",
+  "item.beemancer.blaze_rod_fragment": "Fragment de Bâton de Blaze",
+  "item.beemancer.diamond_fragment": "Fragment de Diamant",
+  "item.beemancer.emerald_fragment": "Fragment d'Émeraude",
+  "item.beemancer.obsidian_fragment": "Fragment d'Obsidienne",
+  "item.beemancer.ender_pearl_fragment": "Fragment de Perle de l'Ender",
+  "item.beemancer.netherite_scrap_fragment": "Fragment de Débris du Nether",
+  "item.beemancer.dragon_breath_fragment": "Fragment de Souffle de Dragon",
+  "item.beemancer.nether_star_fragment": "Fragment d'Étoile du Nether",
+  "item.beemancer.raw_copper_shard": "Éclat de Cuivre Brut",
+  "item.beemancer.raw_iron_shard": "Éclat de Fer Brut",
+  "item.beemancer.raw_gold_shard": "Éclat d'Or Brut",
+  "item.beemancer.lapis_lazuli_shard": "Éclat de Lapis Lazuli",
+  "item.beemancer.quartz_shard": "Éclat de Quartz",
+  "item.beemancer.glowstone_dust_shard": "Éclat de Poudre Lumineuse",
+  "item.beemancer.slime_ball_shard": "Éclat de Slime",
+  "item.beemancer.magma_cream_shard": "Éclat de Crème de Magma",
+  "item.beemancer.ghast_tear_shard": "Éclat de Larme de Ghast",
+  "item.beemancer.diamond_dust": "Poussière de Diamant",
+  "item.beemancer.emerald_dust": "Poussière d'Émeraude",
+  "item.beemancer.obsidian_dust": "Poussière d'Obsidienne",
+  "item.beemancer.ender_pearl_dust": "Poussière de Perle de l'Ender",
+  "item.beemancer.netherite_scrap_dust": "Poussière de Débris du Nether",
+  "item.beemancer.dragon_breath_dust": "Poussière de Souffle de Dragon",
+  "item.beemancer.nether_star_dust": "Poussière d'Étoile du Nether",
   "item.beemancer.royal_honey_crystal": "Cristal de Miel Royal",
   "item.beemancer.raw_crystal_shard": "Éclat de Cristal Brut",
   "item.beemancer.enriched_crystal_shard": "Éclat de Cristal Enrichi",
@@ -175,6 +284,107 @@
   "gene.beemancer.lifetime.normal.desc": "Vit environ 20 minutes",
   "gene.beemancer.lifetime.long": "Longue",
   "gene.beemancer.lifetime.long.desc": "Vit environ 60 minutes",
+
+  "species.beemancer.meadow": "Abeille des Prés",
+  "species.beemancer.forest": "Abeille Forestière",
+  "species.beemancer.rocky": "Abeille des Roches",
+  "species.beemancer.river": "Abeille de Rivière",
+  "species.beemancer.dune": "Abeille des Dunes",
+  "species.beemancer.nether": "Abeille du Nether",
+  "species.beemancer.end": "Abeille de l'End",
+  "species.beemancer.monsty": "Abeille Monstrueuse",
+  "species.beemancer.docile": "Abeille Docile",
+  "species.beemancer.loam": "Abeille du Limon",
+  "species.beemancer.sediment": "Abeille des Sédiments",
+  "species.beemancer.spark": "Abeille Étincelle",
+  "species.beemancer.cultural": "Abeille Cultivée",
+  "species.beemancer.carbon": "Abeille Carbonée",
+  "species.beemancer.cupric": "Abeille Cuprique",
+  "species.beemancer.festering": "Abeille Putride",
+  "species.beemancer.skeletal": "Abeille Squelettique",
+  "species.beemancer.silken": "Abeille Soyeuse",
+  "species.beemancer.arachnid": "Abeille Arachnide",
+  "species.beemancer.tanner": "Abeille Tannière",
+  "species.beemancer.plume": "Abeille à Plumes",
+  "species.beemancer.quercus": "Abeille du Chêne",
+  "species.beemancer.boreal": "Abeille Boréale",
+  "species.beemancer.tropical": "Abeille Tropicale",
+  "species.beemancer.paperbark": "Abeille du Bouleau",
+  "species.beemancer.reed": "Abeille des Roseaux",
+  "species.beemancer.karot": "Abeille Carotteuse",
+  "species.beemancer.tuber": "Abeille Tubercule",
+  "species.beemancer.juicy": "Abeille Juteuse",
+  "species.beemancer.gourd": "Abeille Courge",
+  "species.beemancer.agrarian": "Abeille Agraire",
+  "species.beemancer.flower": "Abeille Florale",
+  "species.beemancer.mushroom": "Abeille Champignon",
+  "species.beemancer.tree": "Abeille Arboricole",
+  "species.beemancer.crystal": "Abeille Cristalline",
+  "species.beemancer.argil": "Abeille Argileuse",
+  "species.beemancer.umbra": "Abeille Ombreuse",
+  "species.beemancer.savanna": "Abeille de Savane",
+  "species.beemancer.frost": "Abeille Givrée",
+  "species.beemancer.volatile": "Abeille Volatile",
+  "species.beemancer.ashen": "Abeille Cendrée",
+  "species.beemancer.igneous": "Abeille Ignée",
+  "species.beemancer.rose_stone": "Abeille Pierre Rose",
+  "species.beemancer.prince": "Abeille Princière",
+  "species.beemancer.infernalist": "Abeille Infernaliste",
+  "species.beemancer.swift": "Abeille Véloce",
+  "species.beemancer.royal": "Abeille Royale",
+  "species.beemancer.ferrous": "Abeille Ferreuse",
+  "species.beemancer.flux": "Abeille du Flux",
+  "species.beemancer.lazuli": "Abeille Lazuli",
+  "species.beemancer.quartzose": "Abeille Quartzeuse",
+  "species.beemancer.luminous": "Abeille Lumineuse",
+  "species.beemancer.grim": "Abeille Sinistre",
+  "species.beemancer.columnar": "Abeille Colonnaire",
+  "species.beemancer.viscous": "Abeille Visqueuse",
+  "species.beemancer.inky": "Abeille Encrée",
+  "species.beemancer.fleece": "Abeille Laineuse",
+  "species.beemancer.adobe": "Abeille Adobe",
+  "species.beemancer.geode": "Abeille Géode",
+  "species.beemancer.marsh": "Abeille des Marais",
+  "species.beemancer.majestic": "Abeille Majestueuse",
+  "species.beemancer.steady": "Abeille Stable",
+  "species.beemancer.wind": "Abeille du Vent",
+  "species.beemancer.thunder": "Abeille du Tonnerre",
+  "species.beemancer.water": "Abeille de l'Eau",
+  "species.beemancer.fire": "Abeille du Feu",
+  "species.beemancer.auric": "Abeille Aurique",
+  "species.beemancer.magmatic": "Abeille Magmatique",
+  "species.beemancer.spirit": "Abeille Spirituelle",
+  "species.beemancer.crimson": "Abeille Cramoisie",
+  "species.beemancer.mycelial": "Abeille Mycélienne",
+  "species.beemancer.humus": "Abeille de l'Humus",
+  "species.beemancer.floral": "Abeille Florale",
+  "species.beemancer.treasure": "Abeille au Trésor",
+  "species.beemancer.siphoning": "Abeille Siphon",
+  "species.beemancer.zephyr": "Abeille Zéphyr",
+  "species.beemancer.prismatic": "Abeille Prismatique",
+  "species.beemancer.crystalline": "Abeille Cristalline",
+  "species.beemancer.insomnia": "Abeille Insomniaque",
+  "species.beemancer.blazing": "Abeille Flamboyante",
+  "species.beemancer.diamantine": "Abeille Diamantine",
+  "species.beemancer.venerable": "Abeille Vénérable",
+  "species.beemancer.volcanic": "Abeille Volcanique",
+  "species.beemancer.xenolith": "Abeille Xénolithe",
+  "species.beemancer.traveler": "Abeille Voyageuse",
+  "species.beemancer.sorrow": "Abeille du Chagrin",
+  "species.beemancer.absorbent": "Abeille Absorbante",
+  "species.beemancer.light": "Abeille de Lumière",
+  "species.beemancer.dark": "Abeille des Ténèbres",
+  "species.beemancer.imperial": "Abeille Impériale",
+  "species.beemancer.demonic": "Abeille Démoniaque",
+  "species.beemancer.paladin": "Abeille Paladin",
+  "species.beemancer.chorus": "Abeille du Chorus",
+  "species.beemancer.ancient": "Abeille Ancienne",
+  "species.beemancer.void": "Abeille du Vide",
+  "species.beemancer.draconic": "Abeille Draconique",
+  "species.beemancer.stellar": "Abeille Stellaire",
+  "species.beemancer.common": "Abeille Commune",
+  "species.beemancer.noble": "Abeille Noble",
+  "species.beemancer.diligent": "Abeille Diligente",
 
   "message.beemancer.storage_controller.edit_mode_on": "Mode édition activé - Cliquez sur les coffres pour les enregistrer",
   "message.beemancer.storage_controller.edit_mode_off": "Mode édition désactivé",
